1998-10-16  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (EXTRA_DIST): Removed automake.spec.in.  From
	Matthew D. Langston.
	(info_TEXINFOS): Removed am-f77.texi.

	* automake.in (handle_ltlibraries): Allow `noinst' LTLIBRARIES.
	These are libtool convenience libraries.

1998-10-13  Tom Tromey  <tromey@cygnus.com>

	* m4/f77.m4: New file.
	* m4/Makefile.am (m4data_DATA): Added f77.m4.

Thu Oct  8 15:00:57 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* automake.in (resolve_linker): Put the Fortran 77 linker where it
	needs to be.

	* automake.in (lang_f77_finish): Add support for Fortran 77.

	* automake.in (f77_extensions): New helper function for function
	`lang_f77_finish'.

	* automake.in (lang_f77_rewrite): Change to return success.

	* automake.in (scan_one_configure_file): Add test for the Fortran
	77 compiler.

	* automake.in (finish_languages): Changed tests for "C++ only" to
	"C++ and/or Fortran 77 only", and renamed `all_cxx' to `non_c'.

	* automake.in: Registered the ppf77 language (`.F' extension) for
	preprocessed Fortran 77.
	
	* automake.in: Registered the ratfor language (`.r' extension).

	* automake.in: Registered Fortran 77 header files with the "header
	language" (`.inc' extension).

Tue Sep  8 14:50:50 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* automake.texi: Added several new index entries.

Sun Aug 30 16:10:31 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* automake.texi:
	- Add `@ovindex' (output variable index).
	- Merge `@defmac' (Autoconf macros) and `@ovindex' to the General
	  Index.

	* automake.texi (Macros):
	- Changed the `@table @code' list of macros to `@defmac'.
	- Add `AC_PROG_FC' and `MDL_F77_LIBRARY_LDFLAGS' to the list.

Tue Aug 11 10:42:39 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* automake.texi (C++): Change `@table' to `@vtable'.

	* automake.texi (Fortran 77): Add Fortran 77 documentation.

1998-10-11  Tom Tromey  <tromey@cygnus.com>
