@@ -1,5 +1,7 @@
 1998-10-16  Tom Tromey  <tromey@cygnus.com>
 
+	* Makefile.am (SUBDIRS): Added `.' again.
+
 	* Makefile.am (EXTRA_DIST): Removed automake.spec.in.  From
 	Matthew D. Langston.
 	(info_TEXINFOS): Removed am-f77.texi.
